# smuggler2

./: .gitattributes  .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CPP2.hs  Makefile  README.md  TODO  TODO.md  smuggler-Main.imports  smuggler.cabal  smuggler2.cabal  weeder.dhall
.github/: dependabot.yml  labeler.yml
.github/workflows/: haskell-ci.yml  haskell.yml
app/: Main.hs  ghc-smuggler2
src/Smuggler/: Anns.hs  Debug.hs  Export.hs  Import.hs  Name.hs  Options.hs  Parser.hs  Plugin.hs
src/Smuggler2/: Anns.hs  Exports.hs  Imports.hs  Options.hs  Parser.hs  Plugin.hs
test/: Test.hs  clean.sh  scratch.sh
test/tests/: Bare.MinimiseImportsReplaceExports  Bare.hs  Bare2.MinimiseImportsReplaceExports-golden  Bare2.PreserveInstanceImportsNoExportProcessing-golden  Bare2.hs  BareHello.NoImportProcessingAddExplicitExports-golden  BareHello.PreserveInstanceImportsNoExportProcessingPrelude  BareHello.hs  BoolBoolUnused.PreserveInstanceImportsNoExportProcessing  BoolBoolUsed.NoImportProcessingReplaceExports  BoolBoolUsed.PreserveInstanceImportsNoExportProcessing-golden  BoolPartlyUsedFirst.NoImportProcessingReplaceExports-golden  BoolPartlyUsedLast.MinimiseImportsNoExportProcessing-golden  BoolPartlyUsedLast.MinimiseImportsReplaceExports-golden  BoolPartlyUsedLast.PreserveInstanceImportsNoExportProcessing-golden  CPP.MinimiseImportsNoExportProcessingPreludeDataVersion-cpp  CPP.NoImportProcessingReplaceExports-cpp  CPP.hs  Class.NoImportProcessingAddExplicitExports  Class.PreserveInstanceImportsNoExportProcessingPrelude-golden  ConstructorsUnused.MinimiseImportsReplaceExports-golden  ConstructorsUnused.NoImportProcessingAddExplicitExports  ConstructorsUnused.PreserveInstanceImportsNoExportProcessing-golden  Dummy.MinimiseImportsReplaceExports  Dummy.PreserveInstanceImportsNoExportProcessing-golden  Duplicated.MinimiseImportsNoExportProcessing  Duplicated.MinimiseImportsReplaceExports  Duplicated.PreserveInstanceImportsNoExportProcessing-golden  Duplicated.hs  ExportExplicit.MinimiseImportsReplaceExports  ExportExplicit.MinimiseImportsReplaceExports-golden  ExportExplicit.NoImportProcessingNoExportProcessing-golden  ExportExplicit.NoImportProcessingReplaceExports  ExportImplicit 2.MinimiseImportsNoExportProcessing  ExportImplicit 2.NoImportProcessingReplaceExports-golden  ExportImplicit.MinimiseImportsReplaceExports  ExportPattern2.MinimiseImportsNoExportProcessingPreludeDataVersion  ExportPattern2.MinimiseImportsReplaceExports  ExportPattern2.MinimiseImportsReplaceExports-golden  ExportPattern2.NoImportProcessingAddExplicitExports-golden  (+63 more)
test/tests.sav/: Bare.NoImportProcessingAddExplicitExports  BareHello.NoImportProcessingAddExplicitExports-golden  BoolBoolUsed.MinimiseImportsReplaceExports  BoolPartlyUsedFirst.MinimiseImportsReplaceExports-golden  BoolPartlyUsedFirst.PreserveInstanceImportsNoExportProcessing  BoolPartlyUsedLast.NoImportProcessingAddExplicitExports  ConstructorsUnused.MinimiseImportsNoExportProcessing-golden  Duplicated.NoImportProcessingReplaceExports-golden  ExportImplicit.NoImportProcessingAddExplicitExports  MoreExports.hs  QualUnqual.MinimiseImportsReplaceExports  QualUnqual.PreserveInstanceImportsNoExportProcessing-golden  TypeConstructorUnused.MinimiseImportsNoExportProcessing  TypeConstructorUnused.NoImportProcessingReplaceExports-golden  TypeUsed.MinimiseImportsReplaceExports  TypeUsed.PreserveInstanceImportsNoExportProcessing  WildcardUnused.MinimiseImportsNoExportProcessing  WildcardUnused.PreserveInstanceImportsNoExportProcessing  WildcardUsed.MinimiseImportsNoExportProcessing-golden  WildcardUsed.MinimiseImportsReplaceExports-golden  WildcardUsed.PreserveInstanceImportsNoExportProcessing
test/tests/Imported/: ExportPattern.MinimiseImportsReplaceExports  ExportPattern.NoImportProcessingAddExplicitExports  ExportPattern.NoImportProcessingNoExportProcessing  ExportPattern.PreserveInstanceImportsNoExportProcessingPrelude  ExportPattern.hs  TypeFam.MinimiseImportsNoExportProcessingPreludeDataVersion  TypeFam.MinimiseImportsReplaceExports  TypeFam.NoImportProcessingReplaceExports  TypeFam.PreserveInstanceImportsNoExportProcessingPrelude  TypeFam.hs
tmp/: Operator.hs  TypeUnused.hs
