cabal-version:   3.0
name:            smuggler
version:         0.3.0.0
synopsis:        GHC Source Plugin that helps to manage imports
description:
  == Usage

  Add @smuggler@ to the dependencies of your project.
  .
  Then add the following to ghc-options: @-fplugin=Smuggler.Plugin@

homepage:        https://github.com/kowainik/smuggler
bug-reports:     https://github.com/kowainik/smuggler/issues
license:         MPL-2.0
license-file:    LICENSE
author:          Dmitrii Kovanikov, Veronika Romashkina
maintainer:      Kowainik <xrom.xkov@gmail.com>
copyright:       2018-2019 Kowainik
category:        Development, Refactoring
build-type:      Simple
extra-doc-files:
  README.md
  CHANGELOG.md

tested-with:     GHC ==8.10.1

flag debug
  description: Enable debugging support
  default:     False
  manual:      True

source-repository head
  type:     git
  location: git@github.com:kowainik/smuggler.git

common common-options
  build-depends:      base >=4.12
  ghc-options:
    -- -O2 gives a nearly 10% speed improvement
    -O2 -Wall -Wextra -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths
    -Wunused-packages -fwrite-ide-info

  if flag(debug)
    ghc-options: -ddump-minimal-imports

  default-language:   Haskell2010

  -- Most of these are unnecessary
  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Smuggler.Anns
    Smuggler.Options
    Smuggler.Parser
    Smuggler.Plugin

  build-depends:
    , containers      >=0.5   && <0.7
    , directory
    , filepath        ^>=1.4
    , ghc             >=8.8.0
    , ghc-exactprint  ^>=0.6
    , syb

  if flag(debug)
    build-depends: text

-- Currently doesn't do anything much
executable play-smuggler
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

  if flag(debug)
    ghc-options: -fplugin=Smuggler.Plugin

  build-depends:  smuggler

common common-tests
  import:         common-options
  hs-source-dirs: test
  build-depends:
    , filepath
    , smuggler
    , tasty
    , tasty-golden
    , typed-process

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite smuggler-test
  import:  common-tests
  type:    exitcode-stdio-1.0
  main-is: Test.hs
