cabal-version:      3.0
name:               smuggler
version:            0.3.0.0
synopsis:           GHC Source Plugin that helps to manage imports
description:
  == Usage
  Add @smuggler@ to the dependencies of your project.
  .
  Then add the following to ghc-options: @-fplugin=Smuggler.Plugin@

homepage:           https://github.com/kowainik/smuggler
bug-reports:        https://github.com/kowainik/smuggler/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Dmitrii Kovanikov, Veronika Romashkina
maintainer:         Kowainik <xrom.xkov@gmail.com>
copyright:          2018-2019 Kowainik
category:           Development, Refactoring
build-type:         Simple
extra-doc-files:
  README.md
  CHANGELOG.md
  TODO.md

extra-source-files:
  test/tests/*.hs
  -- wildcards are allowed only in the basename
  --test/tests/*.*-golden

tested-with:
  GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.3 || ==8.10.1

flag debug
  description: Enable debugging support
  default:     False
  manual:      True

flag threaded
  description: Build with support for multithreaded execution
  default:     True
  manual:      True

source-repository head
  type:     git
  location: https://github.com/jrp2014/smuggler

common common-options
  -- test these bounds
  build-depends:      base >=4.12 && <4.15

  -- -O2 gives a nearly 10% speed improvement
  ghc-options:
    -O2 -Wall -Wextra -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wcompat -Widentities
    -Wredundant-constraints -fhide-source-paths

  if impl(ghc >=8.10.0)
    ghc-options: -Wunused-packages -fwrite-ide-info

  if flag(debug)
    ghc-options: -ddump-minimal-imports
    cpp-options: -DDEBUG

  default-language:   Haskell2010

  -- Most of these are unnecessary
  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications

common executable-options
  ghc-options: -rtsopts

  if flag(debug)
    ghc-options: -debug

  if flag(threaded)
    ghc-options: -threaded -with-rtsopts=-N

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Smuggler.Anns
    Smuggler.Options
    Smuggler.Parser
    Smuggler.Plugin

  build-depends:
    , containers      >=0.5
    , directory       >=1.2
    , filepath        >=1.4
    , ghc             >=8.6.5
    , ghc-exactprint  >=0.6
    , syb             >=0.5

  if flag(debug)
    build-depends: text

-- Currently doesn't do anything much
executable play-smuggler
  import:         common-options
  import:         executable-options
  hs-source-dirs: app
  main-is:        Main.hs

  if flag(debug)
    ghc-options: -fplugin=Smuggler.Plugin

  build-depends:  smuggler

test-suite smuggler-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  build-depends:
    , filepath
    , ghc-paths
    , smuggler
    , tasty
    , tasty-golden
    , typed-process

  main-is:        Test.hs
  ghc-options:    -rtsopts

  if flag(threaded)
    ghc-options: -threaded -with-rtsopts=-N
